force-app/main/default/objects/Account_Event__e/Account_Event__e.object-meta.xml
<CustomObject>
    <description>This is a platform event on the object Account. This is used for the integration with NetSuite Customer.</description>
    <label>Account Event</label>
    <pluralLabel>Account Events</pluralLabel>
</CustomObject>