force-app/main/default/objects/Account_Event__e/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>