force-app/main/default/objects/Account_Event__e/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>