force-app/main/default/objects/Account_Event__e/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <label>Zip</label>
    <length>80</length>
    <type>Text</type>
</CustomField>