force-app/main/default/objects/Account_Event__e/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>