force-app/main/default/objects/Account_Event__e/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <label>Address1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>